--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html lang="en-us">
 
+<head>
+  <meta charset="UTF-8">
+  <title>Assignment 1</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+
+  <header>
+    header 
+  </header>
+
+  <nav>  
+    nav 
+  </nav>
+
+  <section id="left">
+        section
+        <div id="left2">
+               article
+               <div id="left3">h1, h2, h3</div>
+               <div id="left4">p</div>
+          </div>
+  </section>
+   
+  <aside id="right">
+    aside
+  </aside>
+
+  <footer>
+    footer
+  </footer>
+
+</body>
+
+</html>
