--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
   <section id="left">
         section
-        <div id="left2">
+        <div id="article">
                article
-               <div id="left3">h1, h2, h3</div>
-               <div id="left4">p</div>
+               <div id="header">h1, h2, h3</div>
+               <div id="paragraph">p</div>
           </div>
   </section>
    
